# riscv_cpu_yet_again

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  console_output.txt  data.txt  example_program.txt  reg_file.txt  result.txt  tb_top.vcd
.github/workflows/: cmake-multi-platform.yml
cpp/: main.cpp
rtl/: alu.v  bus.v  console.v  console_tb.v  cpu.v  cpu_mem_controller.v  cpu_mem_controller_fixed.v  defines.v  macros.v  mem.v  mem_bram.v  reg_file.v  soc.v  synth_wrapper.v  tb_top.v  top.v  top_tb.v  vga.v
scripts/: vga.py  vga_sim.py
synth_build/: test.asc  test.json
test/: Makefile  a.elf  kernel.elf  kernel.hex  kernel.txt  kernel_big_endian.hex  link.ld  result.txt  test.s
test/src/: console.h  main.c  main.s  shutdown.h  start.s  test.h
verilator_sim/: main.cpp
